# lenet-5-c

./: .gitignore  CMakeLists.txt  README.md  main.cpp
caffe_code/: creat_testing.sh  create_imageset.sh  create_label.py  lenet.prototxt  lenet_iter_10000.solverstate  lenet_iter_5000.caffemodel  lenet_iter_5000.solverstate  lenet_solver.prototxt  lenet_train.sh  test_mean.binaryproto  train.txt  val.txt
notes/: bp.md  reports.md
